syntax = "proto3";

package espy;

message GameEntry {
  string id = 1;
  string title = 2;

  string steam_id = 3;
}

message GameList {
  repeated GameEntry game = 1;
}
